--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,6 @@
   "scripts": {
     "build": "nest build",
     "prebuild": "rm -rf dist",
-    "postbuild": "mkdir -p dist/src/mailer/templates && cp -r src/mailer/templates/*.ejs dist/src/mailer/templates/",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -54,28 +53,27 @@
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
     "@types/bcryptjs": "^2.4.6",
-    "@types/express": "^5.0.0",
-    "@types/jest": "^29.5.14",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^22.10.7",
-    "@types/passport": "^1.0.17",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.11.30",
+    "@types/nodemailer": "^6.4.14",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
+    "@typescript-eslint/eslint-plugin": "^7.3.1",
+    "@typescript-eslint/parser": "^7.3.1",
     "eslint": "^9.18.0",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-prettier": "^5.2.2",
-    "globals": "^16.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
-    "prettier": "^3.4.2",
+    "prettier": "^3.2.5",
     "prisma": "^6.12.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
-    "ts-jest": "^29.2.5",
-    "ts-loader": "^9.5.2",
+    "swc": "^1.10.7",
+    "ts-jest": "^29.1.2",
+    "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.7.3",
-    "typescript-eslint": "^8.20.0"
+    "tsconfig-paths": "^4.2.1",
+    "typescript": "^5.4.2"
   },
   "jest": {
     "moduleFileExtensions": [
